--- a/src/app/modules/layout/component/footer/footer.component.html
+++ b/src/app/modules/layout/component/footer/footer.component.html
@@ -1,6 +1,8 @@
-<footer class="bg-dark">
-    <div class = "text-center">
-        <p>Copyright: <a href="#"> Desarrollo web Frontend</a></p>
-        <p> Consulta nuestro <a href ="#" >Aviso de provacidad</a> y <a href="#"> Términos y condiciones</a></p>
+<footer class="estilo">
+    <div class="text-center">
+        <p>Copyright: <a href="#"> Desarrollo Web Frontend</a></p>
+        <p>Consulta nuestro <a href="#">Aviso de Privacidad</a> y <a href="#">Términos y Condiciones</a></p>
+
     </div>
 </footer>
+
