--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -1,29 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+<nav class="navbar navbar-expand-lg navbar-light fondo">
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
   
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto" id = "navbarDWF">
+
+      <ul class="navbar-nav ms-auto" id="navbarDWF">
         <li class="nav-item active">
-         <a class="nav-link" href="#"><i class="fas fa-users"></i>&nbsp;&nbsp;Clientes</a>
+          <a class="nav-link" href="#"><i class="fas fa-user-tag"></i>&nbsp;&nbsp;Clientes</a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="#">Regiones</a>
+          <a class="nav-link" routerLink="/region">Regiones</a>
+        </li>
+        <li class="nav-link">|</li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#"><i class="fas fa-gifts"></i>&nbsp;&nbsp;Productos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/category">Categorias</a>
         </li>
         <li class="nav-link">|</li>
         <li class="nav-item">
-         <a class="nav-link" href="#"><i class="fas fa-gifts"></i>&nbsp;&nbsp;Productos</a>
+          <a class="nav-link" href="#"><i class="fas fa-file-invoice-dollar"></i>&nbsp;&nbsp;Facturas</a>
         </li>
         <li class="nav-item">
-         <a class="nav-link" href="#">Categorias</a>
+          <a class="nav-link" routerLink="/exchange-rate"><i class="fas fa-file-invoice-dollar"></i>&nbsp;&nbsp;Tasa de Cambio</a>
         </li>
-        <li class="nav-link">|</li>
-        <li class="nav-item active"></li>
-        <li class = "nave-item">
-         <a class="nav-link" href="#"><i class="fas fa-file-invoice-dollar"></i>&nbsp;&nbsp;Facturas</a>
-        </li>
+        
       </ul>
-     
     </div>
   </nav>
