--- a/src/app/modules/layout/component/nav/nav.component.html
+++ b/src/app/modules/layout/component/nav/nav.component.html
@@ -9,7 +9,7 @@
 
       <ul class="navbar-nav ms-auto" id="navbarDWF">
         <li class="nav-item active">
-          <a class="nav-link" href="#"><i class="fas fa-user-tag"></i>&nbsp;&nbsp;Clientes</a>
+          <a class="nav-link" routerLink="/customer"><i class="fas fa-user-tag"></i>&nbsp;&nbsp;Clientes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/region">Regiones</a>
